tests/baselines/reference/innerBoundLambdaEmit.errors.txt
innerBoundLambdaEmit.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== innerBoundLambdaEmit.ts (1 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class Foo {
        }
        var bar = () => { };
    }
    interface Array<T> {
        toFoo(): M.Foo
    }
    